# hackathon-super-memory-mcp-server

./: .env.example  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  build_and_ship.sh  deploy.sh  docker-compose.prod.yml  env.example  mcp_server.py  pyproject.toml  requirements.txt  setup_db.sh  test_tools.py
config/: settings.py
core/: model_loader.py  postgres_store.py
db/: init_db.sql  init_docker_db.sql
docker/: docker-compose.yml
markdowns/: DATABASE_SETUP.md  DOCKER_SHIPPING_GUIDE.md  SETUP_GUIDE.md
scripts/: build_and_ship.sh  demo_recall_agent.py  direct_test_recall.py  init_docker_db.sh  ship.sh
tools/: embed_text.py  fetch_context.py  memory_pipeline.py  prompt_memory.py  store_memory.py  summarize_and_store.py  summarize_chat.py
utils/: logger.py
