[project]
name = "syntaxrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "mcp[cli]>=1.11.0",
    "openai>=1.95.1",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "numpy>=1.24.0",
    "typing-extensions>=4.5.0",
]
